kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/networkpolicy-mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dashboard-frontend
    ports:
    - protocol: TCP
      port: 27017
